--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "license": "MIT",
   "dependencies": {
     "async": "^2.5.0",
+    "axios": "^0.18.0",
     "binary": "~0.3.0",
     "bl": "^1.2.0",
     "buffer-crc32": "~0.2.5",
